Add information about attached JVM agents